--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gunicorn = "^23.0.0"
 django-mdeditor = "^0.1.20"
 markdown = "^3.7"
 djangorestframework = "^3.15.2"
+django-widget-tweaks = "^1.5.0"
 
 [tool.ruff]
 line-length = 79
