--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ markdown = "^3.7"
 djangorestframework = "^3.15.2"
 django-widget-tweaks = "^1.5.0"
 celery = {extras = ["redis"], version = "^5.5.3"}
+django-debug-toolbar = "^6.0.0"
 
 [tool.ruff]
 line-length = 79
