--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ djangorestframework = "^3.15.2"
 django-widget-tweaks = "^1.5.0"
 celery = {extras = ["redis"], version = "^5.5.3"}
 django-debug-toolbar = "^6.0.0"
+requests = "^2.32.5"
+social-auth-app-django = "^5.6.0"
 
 [tool.ruff]
 line-length = 79
