--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ celery = {extras = ["redis"], version = "^5.5.3"}
 django-debug-toolbar = "^6.0.0"
 requests = "^2.32.5"
 social-auth-app-django = "^5.6.0"
+python-dotenv = "^1.2.1"
 
 [tool.ruff]
 line-length = 79
