--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-debug-toolbar = "^6.0.0"
 requests = "^2.32.5"
 social-auth-app-django = "^5.6.0"
 python-dotenv = "^1.2.1"
+dotenv = "^0.9.9"
 
 [tool.ruff]
 line-length = 79
